# fastapi-fast_zero

./: .coverage  .env  database.db  pyproject.toml
fast_zero/: database.py  main.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 9704aaf2ba61_att_banco.py
tests/: conftest.py  test_db.py  test_main.py  test_security.py
